Craig - apply translate3d to dd menu scroll to fix scrollbar position bug resulting from dd menu being translated

--- a/src/less/dropdowns.less
+++ b/src/less/dropdowns.less
@@ -119,8 +119,6 @@
   border-radius: @border-radius-base;
   box-shadow: @shadow-depth-1;
   display: block;
-  //float: left;
-  //font-size: 1.4rem;
   left: 0;
   list-style: none;
   margin: .2rem 0 0;
@@ -275,6 +273,8 @@
 .dropdown__menu__scroll {
   max-height: 20rem;
   overflow-y: auto;
+  // fixes scrollbar position bug that results from translateY on dropdown__menu
+  transform: translate3d(0px, 0px, 0px);
 }
 
 
@@ -313,20 +313,6 @@
   }
 }
 
-
-// -------------------------
-// Dropdown Backdrop
-// -------------------------
-
-
-.dropdown-backdrop {
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: (@zindex-dropdown - 10);
-}
 
 
 
